--- a/views/home.html
+++ b/views/home.html
@@ -1,5 +1,5 @@
 <h1>Mumsnet Todos</h1>
-<div class="list">
+<div class="list" ng-controller="mainCtrl">
   <div class="add">
     <a href="" ng-click="addTodo()">+ Add a New Task</a>
   </div>
