--- a/styles/main.css
+++ b/styles/main.css
@@ -1,70 +1,105 @@
 body {
   color: #2d3339;
-  font-family: "Varela Round";
+  font-size: 16px;
   text-align: center;
   background: #edeff0;
-  font-size: 16px; }
+  font-family: "Varela Round";
+}
+
+body h1 {
+  margin: 0;
+}
 
 a {
   color: #3f8abf;
-  text-decoration: none; }
-  a:hover {
-    color: #65a1cc; }
+  text-decoration: none;
+}
+
+a:hover {
+  color: #65a1cc;
+}
 
 .list {
-  background: #fff;
   width: 80%;
+  background: #fff;
+  text-align: left;
   min-width: 500px;
-  margin: 80px auto 0;
+  margin: 60px auto;
   border-top: 40px solid #5a6772;
-  text-align: left; }
-  .list .item {
-    border-bottom: 2px solid #edeff0;
-    padding: 17px 0 18px 17px; }
-    .list .item label {
-      padding-left: 5px;
-      cursor: pointer; }
-    .list .item .editing-label {
-      margin-left: 5px;
-      font-family: "Varela Round";
-      border-radius: 2px;
-      border: 2px solid #a7b9c4;
-      font-size: 16px;
-      padding: 15px 10px;
-      width: 60%; }
-    .list .item .actions {
-      float: right;
-      margin-right: 20px; }
-      .list .item .actions .delete {
-        color: #ed5a5a; }
-        .list .item .actions .delete:hover {
-          color: #f28888; }
-    .list .item.editing .actions {
-      margin-top: 17px; }
-  .list .edited label:after {
-    content: " edited";
-    text-transform: uppercase;
-    color: #a7b9c4;
-    font-size: 14px;
-    padding-left: 5px; }
-  .list .completed label {
-    color: #a7b9c4;
-    text-decoration: line-through; }
-  .list .add {
-    padding: 25px 0 27px 25px; }
+}
 
-/*input[type="checkbox"] {
-    display:none;
+.list .item {
+  padding: 17px 0 18px 17px;
+  border-bottom: 2px solid #edeff0;
 }
+
+.list .item label {
+  cursor: pointer;
+  padding-left: 5px;
+}
+
+.list .item .editing-label {
+  width: 60%;
+  font-size: 16px;
+  margin-left: 5px;
+  border-radius: 2px;
+  padding: 15px 0 15px 10px;
+  font-family: "Varela Round";
+}
+
+.list .item input[type="text"] {
+  border: 2px solid #a7b9c4;
+}
+
+.list .item .actions {
+  float: right;
+  margin-right: 20px;
+}
+
+.list .item .actions .delete {
+  color: #ed5a5a;
+  margin-left: 10px;
+}
+
+.list .item .actions .delete:hover {
+  color: #f28888;
+}
+
+.list .item.editing .actions {
+  margin-top: 17px;
+}
+
+.list .edited label:after {
+  color: #a7b9c4;
+  font-size: 14px;
+  padding-left: 5px;
+  content: " edited";
+  text-transform: uppercase;
+}
+
+.list .completed label {
+  color: #a7b9c4;
+  text-decoration: line-through;
+}
+
+.list .add {
+  padding: 25px;
+}
+
+input[type="checkbox"] {
+  display:none;
+}
+
 input[type="checkbox"] + span {
-    display:inline-block;
-    width:19px;
-    height:19px;
-    margin:-1px 4px 0 0;
-    vertical-align:middle;
-    background:url(checkbox-empty.svg) left top no-repeat;
-    cursor:pointer;
+  width:19px;
+  height:19px;
+  cursor:pointer;
+  margin:-1px 4px 0 0;
+  display:inline-block;
+  vertical-align:middle;
+  background:url(checkbox-empty.svg) left top no-repeat;
 }
+
 input[type="checkbox"]:checked + span {
-    background:url(checkbox-filled.svg) left top no-repeat;
-}*/
+  background:url(checkbox-filled.svg) left top no-repeat;
+}
