--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,10 @@
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+  outline: none;
+}
+
 body {
   color: #2d3339;
   font-size: 16px;
@@ -25,7 +32,27 @@ a:hover {
   text-align: left;
   min-width: 500px;
   margin: 60px auto;
-  border-top: 40px solid #5a6772;
+}
+
+.list .search {
+  height: 80px;
+  background-color: lightgreen;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.list .search input {
+  border: 0;
+  height: 40px;
+  width: 250px;
+  color: #C3C3C3;
+  padding-left: 20px;
+  border-radius: 20px;
+}
+
+.list .search {
+  height: 80px;
 }
 
 .list .item {
