--- a/views/home.html
+++ b/views/home.html
@@ -1,9 +1,12 @@
 <h1>Mumsnet Todos</h1>
 <div class="list" ng-controller="mainCtrl">
+  <div class="search">
+    <input type="text" placeholder="Search..." ng-model="search.name">
+  </div>
   <div class="add">
     <a href="" ng-click="addTodo()">+ Add a New Task</a>
   </div>
-  <div class="item" ng-repeat="todo in todos" ng-class="{'editing-item': editing, 'edited': todo.edited}">
+  <div class="item" ng-repeat="todo in todos | filter:search" ng-class="{'editing-item': editing, 'edited': todo.edited}">
     <input type="checkbox" ng-model="todo.completed" />
     <label class="editing-label" ng-hide="editing">{{todo.name | uppercase}} - {{todo.date | date}}</label>
     <input class="editing-label" type="text" ng-model="todo.name" ng-show="editing" ng-blur="editing = false" ng-change="todo.edited = true"/>
