--- a/styles/main.css
+++ b/styles/main.css
@@ -24,6 +24,7 @@ a {
 
 a:hover {
   color: #65a1cc;
+  text-decoration: none;
 }
 
 .list {
@@ -32,6 +33,8 @@ a:hover {
   text-align: left;
   min-width: 500px;
   margin: 60px auto;
+  border-radius: 4px;
+  overflow: hidden;
 }
 
 .list .search {
@@ -56,11 +59,19 @@ a:hover {
 }
 
 .list .item {
+  display: flex;
+  align-items: center;
   padding: 17px 0 18px 17px;
   border-bottom: 2px solid #edeff0;
 }
 
+.list .item:last-child {
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
 .list .item label {
+  margin: 0;
   cursor: pointer;
   padding-left: 5px;
 }
@@ -79,13 +90,16 @@ a:hover {
 }
 
 .list .item .actions {
-  float: right;
+  margin-left: auto;
   margin-right: 20px;
+}
+
+.list .item .actions a:nth-child(2) {
+  margin: 0 10px;
 }
 
 .list .item .actions .delete {
   color: #ed5a5a;
-  margin-left: 10px;
 }
 
 .list .item .actions .delete:hover {
