--- a/views/home.html
+++ b/views/home.html
@@ -6,13 +6,14 @@
   <div class="add">
     <a href="" ng-click="addTodo()">+ Add a New Task</a>
   </div>
-  <div class="item" ng-repeat="todo in todos | filter:search" ng-class="{'editing-item': editing, 'edited': todo.edited}">
+  <div class="item" ng-repeat="todo in todos | filter:search | orderBy: 'completed'" ng-class="{'editing-item': editing, 'edited': todo.edited, 'completed': todo.completed}" ng-init="todo.completed = false">
     <input type="checkbox" ng-model="todo.completed" />
-    <label class="editing-label" ng-hide="editing">{{todo.name | uppercase}} - {{todo.date | date}}</label>
-    <input class="editing-label" type="text" ng-model="todo.name" ng-show="editing" ng-blur="editing = false" ng-change="todo.edited = true"/>
+    <span ng-click="todo.completed = !todo.completed"></span>
+    <label class="editing-label" ng-click="editing = true" ng-hide="editing">{{todo.name | uppercase}} - {{todo.date | date}}</label>
+    <input class="editing-label" type="text" ng-model="todo.name" ng-show="editing" ng-blur="editing = false" ng-change="todo.edited = true" />
     <div class="actions" >
       <a href="" ng-click="editing = !editing">Edit</a>
-      <a href="" ng-click="saveTodo(todo)">Save</a>
+      <a href="" ng-click="saveTodos(todo)">Save</a>
       <a href="" class="delete" ng-click="deleteTodo(todo, $index)">Delete</a>
     </div>
   </div>
