--- a/views/home.html
+++ b/views/home.html
@@ -1,4 +1,4 @@
-<h1>Mumsnet Todos</h1>
+<img src="img/mn-logo.png" class="hero" alt="mn-logo">
 <div class="list" ng-controller="mainCtrl">
   <div class="search">
     <input type="text" placeholder="Search..." ng-model="search.name">
