--- a/views/books.html
+++ b/views/books.html
@@ -1,25 +1,37 @@
 <div class="main">
   <div class="container">
-
     <h1>{{ title }}</h1>
     <h2>{{ promo }}</h2>
 
-    <div ng-repeat="product in products" class="col-md-6">
-      <div class="thumbnail">
-        <img ng-src="{{product.cover}}">
-        <p class="title">{{ product.name }}</p>
-        <p class="price">{{ product.price | currency }}</p>
-        <p class="date">{{ product.pubdate | date }}</p>
-        <div class="rating">
-          <p class="likes" ng-click="plusOne($index)">+ {{product.likes}}</p>
-          <p class="dislikes" ng-click="minusOne($index)">- {{ product.dislikes }} </p>
+    <div class="row" ng-repeat="product in products">
+      <div class="col-md-8">
+        <div class="col-md-6" >
+          <div class="thumbnail">
+            <img ng-src="{{product.cover}}">
+            <div class="rating">
+              <p class="likes" ng-click="plusOne($index)">+ {{product.likes}}</p>
+              <p class="dislikes" ng-click="minusOne($index)">- {{ product.dislikes }}</p>
+            </div>
+          </div>
+        </div >
+
+        <div class="col-md-6" >
+          <div class="panel panel-default">
+            <div class="panel-heading">{{ product.name }}
+              <p class="price">{{ product.price | currency }}</p>
+            </div>
+            <div class="panel-body">
+              <p class="date">{{ product.pubdate | date }}</p>
+              <p>{{product.description}} </p>
+              <p>Likes: {{product.likes}}</p>
+              <p>Dislikes: {{product.dislikes}}</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-
   </div>
 </div>
-
 
 <div class="footer">
   <div class="container">
