--- a/views/contact.html
+++ b/views/contact.html
@@ -1,20 +1,80 @@
-<h1>contact page</h1>
+<img src="" alt="">
 
+<div class="container main-content" ng-controller="MinMaxCtrl">
 
-<div class="container">
-  <h2>Drop an email to</h2>
-  <form>
-    <div class="form-group">
-      <label for="email">Email:</label>
-      <input type="email" class="form-control" id="email" placeholder="Enter email">
-    </div>
-    <div class="form-group">
-      <label for="pwd">Password:</label>
-      <input type="password" class="form-control" id="pwd" placeholder="Enter password">
-    </div>
-    <div class="checkbox">
-      <label><input type="checkbox"> Remember me</label>
-    </div>
-    <button type="submit" class="btn btn-default">Submit</button>
-  </form>
-</div>
+	<form ng-submit="onSubmit()"
+				novalidate="novalidate">
+		<div class="form-group" >
+			<label for="name" class="control-label">Name</label >
+			<input type="text"
+			       class="form-control"
+			       ng-model="formModel.name"
+			       id="name"
+					   required="required" >
+		</div >
+
+		<div class="form-group">
+			<label for="email" class="control-label">Email</label >
+			<input type="email"
+			       class="form-control"
+			       ng-model="formModel.email"
+			       id="email"
+					   required="required" >
+		</div >
+
+		<div class="form-group" >
+			<label for="username" class="control-label">Username</label >
+			<input type="text"
+			       class="form-control"
+			       ng-model="formModel.username"
+			       ng-pattern="/^[A-Za-z0-9_]{1,32}$/"
+			       ng-minlength="7"
+			       ng-pattern-err-type="badUsername"
+			       id="username"
+			       required="required" >
+		</div >
+
+		<div class="form-group" >
+			<label for="age" class="control-label">Age</label >
+			<input type="number"
+			       class="form-control"
+			       ng-model="formModel.age"
+			       min="18"
+			       max="64"
+			       id="age"
+			       ng-min-err-type="tooYoung"
+			       ng-max-err-type="tooOld"
+			       required="required" >
+		</div >
+
+		<div class="form-group" >
+			<label for="sex" class="control-label">Sex</label >
+			<select id="sex"
+							class="form-control"
+							ng-model="formModel.sex"
+							required="required" >
+				<option value="" >Please Choose</option >
+				<option value="male" >Male</option >
+				<option value="female" >Female</option >
+			</select >
+		</div >
+
+		<div class="form-group" >
+			<label for="password" class="control-label">Password</label >
+			<input type="password"
+			       class="form-control"
+			       ng-model="formModel.password"
+			       id="password"
+			       required="required"
+						 ng-minlength="10">
+		</div >
+
+		<div class="form-group">
+			<button class="btn btn-primary"
+							type="submit">Register
+			</button>
+		</div>
+
+	</form >
+
+</div >
